fix: footer missing padding
Исправил неработающий отступ в футере.

--- a/csm-client/app/Footer/Footer.module.css
+++ b/csm-client/app/Footer/Footer.module.css
@@ -3,6 +3,7 @@
     margin: auto;
     justify-content: space-between;
     display: flex;
+    padding: 0 16px;
 }
 
 .footer {
@@ -11,7 +12,7 @@
     position: absolute;
     width: 100vw;
     bottom: 0px;
-    padding: 26px 16px;
+    padding: 26px 0;
     font-weight: 200;
     font-size: 0.9em;
 }
